packages/tx3-sdk/tests/setup.ts
// Test setup file
// Global test configurations and utilities

// Setup global test utilities
global.console = {
  ...console,
  // Uncomment to quiet console.log statements in tests
  // log: jest.fn(),
  // debug: jest.fn(),
  // info: jest.fn(),
  // warn: jest.fn(),
  // error: jest.fn(),
};

export {};
